Overhaul annotated-spectrum export: fractional sizes, correct PDF size, modern Batik/FOP
Fix several issues in the spectrum image export and modernise the SVG/PDF stack.

ExportExpectedSizeDialog:
- Parse the width/height as decimals. Integer parsing threw on fractional values
  (e.g. 2.5in), so Preview silently aborted and the size never changed; pixels
  still use whole numbers.
- Convert the width/height when the format or unit changes, preserving the
  actual (pixel) size through the screen DPI -- so switching e.g. PNG(900px) to
  PDF shows the equivalent inches instead of reinterpreting 900 as 900mm. The
  current unit is kept when the new format still offers it; combo events are
  guarded (SELECTED only, plus a re-entrancy flag) so the conversion runs once.

Export (PDF page size):
- Size the PDF page with KEY_PIXEL_UNIT_TO_MILLIMETER (as PNG/TIFF already did)
  instead of KEY_DEVICE_RESOLUTION, which does not size the page and produced a
  PDF 2x too large on a HiDPI (2x) display.

Export (libraries + fonts):
- Upgrade Batik 1.6 -> 1.18 and the FOP-based pdf-transcoder 1.0 -> FOP 2.10
  (excluding the old batik artifacts from utilities, adding fop + batik-svggen).
  Only API change needed: SVGDOMImplementation moved to org.apache.batik.anim.dom.
- Render export text as vector outlines (SVGGraphics2D textAsShapes), matching
  what the old transcoder did implicitly. Modern FOP otherwise substitutes a
  base-14 font (Times) for the unresolved Arial family; outlines keep the exact
  on-screen look. Also replaced deprecated new Float(String) with Float.valueOf.